--- a/public/juegos/business-advisory/index.html
+++ b/public/juegos/business-advisory/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Hello R Markdown - Astros</title>
+  <title>Business Advisory - Astros</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="/favicon.png">
@@ -107,52 +107,67 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12 col-md-9">
-      <h1>Hello R Markdown</h1>
-      Thursday, Jul 23, 2015
-      Author: Frida Gomam
+      <h1>Business Advisory</h1>
+      Wednesday, Nov 28, 2018
+      
       <div class="content">
         
 
+<p>Lorem markdownum, dictis umbrosum dextrum, Lelegeia quamquam distantes pares
+ignisque quaerit dederat gemino Aethiopesque <a href="#inque-ne-collocat">caelo</a>
+ulciscitur est. Morte <a href="#esse-ferro-nisi">lugebere</a> conatur <a href="#pia-non">Pallada
+quaerentes</a> tulit, <strong>ignis vagatur undis</strong>, latitantem ignemque non
+laevo. Terras seu favoni tectas movit hunc motuque damno tutoque quattuor. Leto
+duo arbore, tua paelice regnis scopulis ut Lachne Menoetae nigra repugnat
+Coroneus est qui viscere barbariam <strong>seris</strong>. Vim in quamquam colla ventura
+remos, Procne mane atque sic solent <a href="#iuvabat-limumque">non caelestibus</a>.</p>
 
-<div id="r-markdown" class="section level1">
-<h1>R Markdown</h1>
-<p>This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <a href="http://rmarkdown.rstudio.com" class="uri">http://rmarkdown.rstudio.com</a>.</p>
-<p>You can embed an R code chunk like this:</p>
-<pre class="r"><code>summary(cars)
-##      speed           dist       
-##  Min.   : 4.0   Min.   :  2.00  
-##  1st Qu.:12.0   1st Qu.: 26.00  
-##  Median :15.0   Median : 36.00  
-##  Mean   :15.4   Mean   : 42.98  
-##  3rd Qu.:19.0   3rd Qu.: 56.00  
-##  Max.   :25.0   Max.   :120.00
-fit &lt;- lm(dist ~ speed, data = cars)
-fit
-## 
-## Call:
-## lm(formula = dist ~ speed, data = cars)
-## 
-## Coefficients:
-## (Intercept)        speed  
-##     -17.579        3.932</code></pre>
-</div>
-<div id="including-plots" class="section level1">
-<h1>Including Plots</h1>
-<p>You can also embed plots. See Figure <a href="#fig:pie">1</a> for example:</p>
-<pre class="r"><code>par(mar = c(0, 1, 0, 1))
-pie(
-  c(280, 60, 20),
-  c(&#39;Sky&#39;, &#39;Sunny side of pyramid&#39;, &#39;Shady side of pyramid&#39;),
-  col = c(&#39;#0292D8&#39;, &#39;#F7EA39&#39;, &#39;#C4B632&#39;),
-  init.angle = -50, border = NA
-)</code></pre>
-<div class="figure"><span id="fig:pie"></span>
-<img src="/www.example.compost/2015-07-23-r-rmarkdown_files/figure-html/pie-1.png" alt="A fancy pie chart." width="672" />
-<p class="caption">
-Figure 1: A fancy pie chart.
-</p>
-</div>
-</div>
+<h2 id="inter-pectore-totidem">Inter pectore totidem</h2>
+
+<p>Presserat <a href="#diversa-iam-inter">transitque inde</a>. Vel montes tum cohors Tityos
+lassavit nihil oracula exiguo ligatis.</p>
+
+<h2 id="novis-hunc-qua-erat-caecisque">Novis hunc qua erat caecisque</h2>
+
+<p>Et Aeneae, nivosos magos, donata in quod cum <a href="#loco-aris">terris</a>, cumque solum,
+manibus auro moenibus glaebas. Manus incaluere. Nunc audiat teneat dextra,
+finivit cui male venit moves! Senior et niger tepido parenti fuit, in ponit
+spectemur et opto speret. Ferum Neptunus tergore.</p>
+
+<p>Nunc erant super: sacra cingebant tandem: rogabam terras, ripa. Cum est scire
+est increpat, leaena ipsa venae me minus casusve tauri. Poscis sacrorum
+<em>congerit currus</em> Hippotades poenas. Non capta, <strong>saturatos tecti</strong> dum versata,
+cum Phineu, nomina dataque rubenti ignorant non lymphata, ara.</p>
+
+<h2 id="naiades-latuere-rubenti-tendere-os-phrygum-eminus">Naiades latuere rubenti tendere os Phrygum eminus</h2>
+
+<p>Respondit et tela viae illas saetas prodidit facta novitate, iurare trahitur
+morte tecta <a href="#se">pugnabo</a>. Est age, paelicis vestigia tremor capillis carere
+formae ne ait modo. Considere suam anguicomae neque Amphitrite dixit
+<a href="#ardore-ruborem-nutrit">quamvis</a> meri convicia et dotem, tunc aderis metu ego
+habenas nec domum humo? Esse orba suo pedem tandem, pignus qui me tellus a
+Acmona male exuere ecce; <a href="#sed">pelagi</a>, Procnen causam? Carpe vertice tua etiam
+interdum detinet nec tanta capillos spolieris tutoque ventos <em>Iunonis</em> Iovis
+retemptat <em>rexit generumque</em> fides.</p>
+
+<h2 id="statuunt-nais-inponere-tamen-duodena-aemulus-mille">Statuunt nais inponere tamen duodena aemulus mille</h2>
+
+<p>Feriat humilis recuset parum! Bitumine nati indignatus; longa nec vulnus cognita
+pondere, incola se non aut, frangitur! Cavis resoluta: ilia ardeat terraeque
+nova, adhuc! Ferox fertque tellus Iunonis: <a href="#tenues">virgineos sum</a> contigerant
+terga pater, quod ore nam praecipiti levatus virilia Hylen. Inhaesit mucro,
+superum moveri late rota rapi avis amans <em>toto</em>, carpere reclinis pietas
+habenas, ne dici Canenti.</p>
+
+<ol>
+<li>Induruit huc grave simili</li>
+<li>Praecincti natos</li>
+<li>Ad dedit parentem</li>
+<li>Linguae pendent</li>
+</ol>
+
+<p>Non sensu est fecerat his rerum insignia verba, aeno nubila curvi. Tutus sibi
+isset; nec non ille vero abstulit, ite est. Digitoque ora ego aethera, comas?</p>
 
       </div>
     </div>
